<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/profile_img_size"
            android:layout_height="@dimen/profile_img_size"
            android:src="@drawable/profile_pic"
            app:civ_border_color="#FFFFFF"
            app:civ_border_overlay="true"
            app:civ_border_width="@dimen/profile_img_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_padding"
            android:fontFamily="@font/font"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/name_tv_size"
            android:textStyle="bold" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_profile"
        android:scrollbars="none"
        app:elevation="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:drawableEnd="@drawable/ic_path"
                    android:fontFamily="@font/font"
                android:text="@string/track"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/tv_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_hight"
                    android:background="@color/view_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:drawableEnd="@drawable/ic_world"
                    android:fontFamily="@font/font"
                    android:text="@string/country"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/tv_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_hight"
                    android:background="@color/view_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:drawableEnd="@drawable/ic_email"
                    android:fontFamily="@font/font"
                    android:text="@string/myemail"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/tv_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_hight"
                    android:background="@color/view_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:drawableEnd="@drawable/ic_phone"
                    android:fontFamily="@font/font"
                    android:text="@string/tel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/tv_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_hight"
                    android:background="@color/view_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:drawableEnd="@drawable/ic_slack"
                    android:fontFamily="@font/font"
                    android:text="@string/slack_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/tv_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_hight"
                    android:background="@color/view_color" />

        </LinearLayout>
    </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>


